Melhorias na validação e no json de retorno da api de consulta de cep

--- a/correios-integration/src/main/resources/ValidationMessages.properties
+++ b/correios-integration/src/main/resources/ValidationMessages.properties
@@ -1,2 +1,2 @@
-cepSearchRequest.cep.empty=CEP inválido. CEP nao pode ser nulo/vazio.
-cepSearchRequest.cep.pattern=CEP inválido. CEP deve estar no formato 00000-000.
+cepSearchRequest.cep.empty=CEP invalido. CEP nao pode ser nulo/vazio.
+cepSearchRequest.cep.pattern=CEP invalido. CEP deve estar no formato 00000-000.
