Adicao de paginacao e melhoria nos testes automatizados

--- a/address-manager/src/main/resources/application.properties
+++ b/address-manager/src/main/resources/application.properties
@@ -1,1 +1,6 @@
 server.port=${port:8081}
+
+#Configuracoes da aplicacao
+application.base.url=http://localhost:8081/
+cep.search.url=http://localhost:8080/cep
+page.size=3
