Adicao de logback. Melhorias no servico de atualizacao de endereco, somente ira atualizar campos que forem passados na requisicao. Melhorias nos testes unitarios

--- a/address-manager/src/main/resources/application.properties
+++ b/address-manager/src/main/resources/application.properties
@@ -4,3 +4,9 @@ server.port=${port:8081}
 application.base.url=http://localhost:8081/
 cep.search.url=http://localhost:8080/cep
 page.size=3
+
+#configuracoes de log
+logging.file=application.log
+logging.level.org.springframework.web=ERROR
+logging.level.org.hibernate=ERROR
+logging.level.br.com.manager=DEBUG
