--- a/address-manager/pom.xml
+++ b/address-manager/pom.xml
@@ -46,6 +46,11 @@
             <artifactId>commons-lang3</artifactId>
             <version>3.4</version>
         </dependency>
+        <dependency>
+            <groupId>com.jayway.restassured</groupId>
+            <artifactId>rest-assured</artifactId>
+            <version>2.5.0</version>
+        </dependency>
     </dependencies>
 
     <properties>
